test/fail/ok/non-persistent2.tc-human.ok
error[M0220]: this actor or actor class should be declared `persistent`
    ┌─ non-persistent2.mo:2:1
  2 │  actor { // error
    │  ^^^^^ 
